Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-125238

QVideoFrame::toImage fails on Android with 16 bit per component planar YUV formats

XMLWordPrintable

    • Android
    • 562a726f1 (dev), 2c0c05332 (6.9), 87ad3ba49 (6.8), 001f03bda (dev), 9e302d9eb (6.9), aee76b5c8 (6.8)
    • Multimedia wk 51-2, Multimedia wk 5-6, Multimedia wk 7-8, Multimedia, weeks 9-10

      QVideoFrame::toImage() returns null QImage with these formats:

      QVideoFrameFormat::Format_Y16
      QVideoFrameFormat::Format_P010
      QVideoFrameFormat::Format_P016
      QVideoFrameFormat::Format_YUV420P10

      See tst_qvideoframecolormanagement

       

        1. output_y16.mkv
          27.74 MB
        2. output_yuv420p10.mp4
          484 kB
        For Gerrit Dashboard: QTBUG-125238
        # Subject Branch Project Status CR V

            bartlomiejmoskal Bartlomiej Moskal
            johanseg Jøger Hansegård
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes