Fallback for R16 and RG16 texture types

When R16 RHI Texture Type is not supported by the device, we will try
to use RG8 instead.
When RG16 RHI Texture Type is not supported by the device, we will try
to use RGBA8 instead.

Fixes: QTBUG-125238
Change-Id: Ic5d7751ad9a54ba26667c849244e2b6ed0c8403c
Reviewed-by: Mikko Hallamaa <mikko.hallamaa@qt.io>
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>
(cherry picked from commit 562a726f1b39d956a93293c0e7bca59245324619)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 2c0c05332fe5ab3c28876a6860a23faf9075ee69)