src/multimedia/shaders/p016.frag
@@ -6,6 +6,7 @@
 
 #include "uniformbuffer.glsl"
 #include "colortransfer.glsl"
+#include "texturecomponent.glsl"
 
 layout(location = 0) in vec2 texCoord;
 layout(location = 0) out vec4 fragColor;
@@ -15,8 +16,8 @@ layout(binding = 2) uniform sampler2D plane2Texture;
 
 void main()
 {
-    float Y = texture(plane1Texture, texCoord).r;
-    vec2 UV = texture(plane2Texture, texCoord).rg;
+    float Y = getR16(plane1Texture, texCoord, ubuf.plane1Format);
+    vec2 UV = getRG16(plane2Texture, texCoord, ubuf.plane2Format);
     vec4 color = vec4(Y, UV.x, UV.y, 1.);
     fragColor = ubuf.colorMatrix * color * ubuf.opacity;
 
